force-app/main/default/objects/RBRK_SubscriptionSummaryVariable__c/RBRK_SubscriptionSummaryVariable__c.object-meta.xml
<CustomObject>
    <description>Subscription and Asset Summary Variables</description>
    <label>Subscription/Asset Summary Variable</label>
    <nameField>
        <label>SubscriptionSummaryVariables Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RBRK_SubscriptionSummaryVariables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>