force-app/main/default/objects/RBRK_SubscriptionSummaryVariable__c/fields/RBRK_AggregateField__c.field-meta.xml
<CustomField>
    <fullName>RBRK_AggregateField__c</fullName>
    <description>Fields to be Aggregated</description>
    <label>Aggregate Field</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quantity</fullName>
            </value>
            <value>
                <fullName>SBQQ__NetTotal__c</fullName>
            </value>
            <value>
                <fullName>EOL_Date__c</fullName>
            </value>
            <value>
                <fullName>SBQQ__SubscriptionTerm__c</fullName>
            </value>
            <value>
                <fullName>Name</fullName>
            </value>
            <value>
                <fullName>SBQQ__Quantity__c</fullName>
            </value>
            <value>
                <fullName>SBQQ__PackageTotal__c</fullName>
            </value>
            <value>
                <fullName>CPQ_MSP_Sales_Price__c</fullName>
            </value>
            <value>
                <fullName>SBQQ__Discount__c</fullName>
            </value>
            <value>
                <fullName>SBQQ__EndDate__c</fullName>
            </value>
            <value>
                <fullName>End_Date__c</fullName>
            </value>
            <value>
                <fullName>Renewal_Contract_Earliest_Date__c</fullName>
            </value>
            <value>
                <fullName>SBQQ__EffectiveEndDate__c</fullName>
            </value>
            <value>
                <fullName>SBQQ__StartDate__c</fullName>
            </value>
            <value>
                <fullName>Eol_Date_Formula__c</fullName>
            </value>
            <value>
                <fullName>SBQQ__EffectiveStartDate__c</fullName>
            </value>
            <value>
                <fullName>Start_Date_Check_Flag__c</fullName>
            </value>
            <value>
                <fullName>Per_Year_Price__c</fullName>
            </value>
            <value>
                <fullName>Active_Entitlement_Count__c</fullName>
            </value>
            <value>
                <fullName>Subscription_Term__c</fullName>
            </value>
            <value>
                <fullName>Related_End_Date__c</fullName>
            </value>
            <value>
                <fullName>Calculate_End_Date__c</fullName>
            </value>
            <value>
                <fullName>Calculated_End_Date__c</fullName>
            </value>
            <value>
                <fullName>Approval_Discount__c</fullName>
            </value>
            <value>
                <fullName>Number_of_Sites__c</fullName>
            </value>
            <value>
                <fullName>Number_of_Onsite_required__c</fullName>
            </value>
            <value>
                <fullName>Prior_Net_Total__c</fullName>
            </value>
            <value>
                <fullName>Promo_Disc__c</fullName>
            </value>
            <value>
                <fullName>QuoteTemplTotalDiscountRate__c</fullName>
            </value>
            <value>
                <fullName>Trade_Up_Discount__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>