force-app/main/default/objects/RBRK_SubscriptionSummaryVariable__c/fields/RBRK_AggregateFunction__c.field-meta.xml
<CustomField>
    <fullName>RBRK_AggregateFunction__c</fullName>
    <label>Aggregate Function</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sum</fullName>
            </value>
            <value>
                <fullName>Count</fullName>
            </value>
            <value>
                <fullName>Max</fullName>
            </value>
            <value>
                <fullName>Min</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>