force-app/main/default/objects/RBRK_SubscriptionSummaryVariable__c/fields/RBRK_CombineWith__c.field-meta.xml
<CustomField>
    <fullName>RBRK_CombineWith__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Variable Element</label>
    <referenceTo>RBRK_SubscriptionSummaryVariable__c</referenceTo>
    <relationshipLabel>RBRK_SubscriptionSummaryVariables</relationshipLabel>
    <relationshipName>RBRK_SubscriptionSummaryVariables</relationshipName>
    <type>Lookup</type>
</CustomField>