force-app/main/default/objects/RBRK_SubscriptionSummaryVariable__c/fields/RBRK_CompositeOperator__c.field-meta.xml
<CustomField>
    <fullName>RBRK_CompositeOperator__c</fullName>
    <label>Composite Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Add</fullName>
            </value>
            <value>
                <fullName>Subtract</fullName>
            </value>
            <value>
                <fullName>Multiply</fullName>
            </value>
            <value>
                <fullName>Divide</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>