force-app/main/default/objects/RBRK_SubscriptionSummaryVariable__c/fields/RBRK_CompositeValueElement__c.field-meta.xml
<CustomField>
    <fullName>RBRK_CompositeValueElement__c</fullName>
    <label>Composite Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>