force-app/main/default/objects/RBRK_SubscriptionSummaryVariable__c/fields/RBRK_FilterField__c.field-meta.xml
<CustomField>
    <fullName>RBRK_FilterField__c</fullName>
    <description>Fields to be filtered from Subscription or asset</description>
    <label>Filter Field</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Status</fullName>
            </value>
            <value>
                <fullName>Product Family</fullName>
            </value>
            <value>
                <fullName>SBQQSC__ProductName__c</fullName>
            </value>
            <value>
                <fullName>SBQQ__ProductCode__c</fullName>
            </value>
            <value>
                <fullName>SC_Product_Family__c</fullName>
            </value>
            <value>
                <fullName>Is_Premium_Support__c</fullName>
            </value>
            <value>
                <fullName>EOL_Date__c</fullName>
            </value>
            <value>
                <fullName>Is_CPQ__c</fullName>
            </value>
            <value>
                <fullName>SBQQ__ProductFamily__c</fullName>
            </value>
            <value>
                <fullName>Payment_Options__c</fullName>
            </value>
            <value>
                <fullName>Support_Type__c</fullName>
            </value>
            <value>
                <fullName>Subscription_Term_Validation__c</fullName>
            </value>
            <value>
                <fullName>Is_RBK_Appliance__c</fullName>
            </value>
            <value>
                <fullName>Is_Valid_Support_for_RBK__c</fullName>
            </value>
            <value>
                <fullName>Is_Appliance_Based_Hardware__c</fullName>
            </value>
            <value>
                <fullName>Bundled_Premium_Support__c</fullName>
            </value>
            <value>
                <fullName>Is_Node_Based_Hardware__c</fullName>
            </value>
            <value>
                <fullName>SBQQ__SubscriptionTerm__c</fullName>
            </value>
            <value>
                <fullName>Add_INSTALL_sku__c</fullName>
            </value>
            <value>
                <fullName>IsRCDM__c</fullName>
            </value>
            <value>
                <fullName>Product_Payment_Option__c</fullName>
            </value>
            <value>
                <fullName>Subscription_Payment_Option__c</fullName>
            </value>
            <value>
                <fullName>Product_Subtype__c</fullName>
            </value>
            <value>
                <fullName>Product_Code_Custom__c</fullName>
            </value>
            <value>
                <fullName>SW_Cons_Index__c</fullName>
            </value>
            <value>
                <fullName>Wrapper_Line__c</fullName>
            </value>
            <value>
                <fullName>Rubrik_GO_PA__c</fullName>
            </value>
            <value>
                <fullName>Is_MSP_Product__c</fullName>
            </value>
            <value>
                <fullName>SBQQ__RequiredBy__c</fullName>
            </value>
            <value>
                <fullName>Parent_Consumption_Type__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>