force-app/main/default/objects/RBRK_SubscriptionSummaryVariable__c/fields/RBRK_FilterValue__c.field-meta.xml
<CustomField>
    <fullName>RBRK_FilterValue__c</fullName>
    <description>Filter values for the conditions</description>
    <label>Filter Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>