force-app/main/default/objects/RBRK_SubscriptionSummaryVariable__c/fields/RBRK_IsActive__c.field-meta.xml
<CustomField>
    <fullName>RBRK_IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Sets the rule to be in scope of calculations</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>