force-app/main/default/objects/RBRK_SubscriptionSummaryVariable__c/fields/RBRK_Scope__c.field-meta.xml
<CustomField>
    <fullName>RBRK_Scope__c</fullName>
    <label>Scope</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quote</fullName>
            </value>
            <value>
                <fullName>Asset</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>