force-app/main/default/objects/RBRK_SubscriptionSummaryVariable__c/fields/RBRK_SVUniqueId__c.field-meta.xml
<CustomField>
    <fullName>RBRK_SVUniqueId__c</fullName>
    <externalId>true</externalId>
    <label>Summary Variable Id</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>