force-app/main/default/objects/RBRK_SubscriptionSummaryVariable__c/fields/RBRK_TargetObject__c.field-meta.xml
<CustomField>
    <fullName>RBRK_TargetObject__c</fullName>
    <label>Target Object</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Asset</fullName>
            </value>
            <value>
                <fullName>Subscription</fullName>
            </value>
            <value>
                <fullName>Quote Line</fullName>
            </value>
            <value>
                <fullName>Product Option</fullName>
                <isActive>false</isActive>
                <label>Product Option</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>