force-app/main/default/objects/RBRK_SubscriptionSummaryVariable__c/fields/RBRK_UniqueId__c.field-meta.xml
<CustomField>
    <fullName>RBRK_UniqueId__c</fullName>
    <description>Unique identifier for the rule</description>
    <label>Unique Id</label>
    <type>AutoNumber</type>
</CustomField>